# ya-client

./: .gitignore  .pre-commit-config.yaml  .validaterc  Cargo.toml  README.md  index.html
.github/: CODEOWNERS
.github/workflows/: code-check.yml  openapi-spec.yml  rust.yml
client/: Cargo.toml
client/examples/: market_interaction.rs
client/src/: cli.rs  lib.rs  market.rs  web.rs
client/src/activity/: provider.rs  requestor.rs
client/src/activity/requestor/: control.rs  state.rs
client/src/market/: provider.rs  requestor.rs
client/src/payment/: provider.rs  requestor.rs
docs/: gsb_api.md  index.html
docs/swagger/: swagger-initializer.js
examples/: activity_interaction.rs  allocation_management.rs  list_offers.rs  market_interaction.rs
model/: Cargo.toml
model/examples/: gen-json-schema.rs
model/src/: activity.rs  error_message.rs  identity.rs  lib.rs  market.rs  net.rs  node_id.rs  p2p.rs  payment.rs  vpn.rs
model/src/activity/: activity_state.rs  activity_usage.rs  create_activity.rs  encrypted.rs  exe_script_command.rs  exe_script_command_result.rs  exe_script_command_state.rs  exe_script_request.rs  provider_event.rs  runtime_event.rs  sgx_credentials.rs
model/src/market/: agreement.rs  agreement_event.rs  agreement_operation_event.rs  agreement_proposal.rs  agreement_termination_reason.rs  demand.rs  demand_offer_base.rs  event.rs  offer.rs  property_query.rs  proposal.rs  reason.rs  scan.rs
model/src/payment/: acceptance.rs  account.rs  activity_payment.rs  agreement_payment.rs  allocation.rs  debit_note.rs  debit_note_event.rs  document_status.rs  driver_details.rs  event_type.rs  invoice.rs  invoice_event.rs  invoice_status.rs  market_decoration.rs  network.rs  params.rs  payment.rs  rejection.rs  rejection_reason.rs
specs/: activity-api.yaml  capability-api.yaml  common.yaml  event-api.yaml  exe-script.yaml  gsb-api-messages.yaml  gsb-api.yaml  identity-api.yaml  market-api.yaml  net-api-v2.yaml  net-api.yaml  payment-api.yaml  version-api.yaml
src/: activity.rs  cli.rs  error.rs  identity.rs  lib.rs  market.rs  net.rs  p2p.rs  payment.rs  sgx.rs  sgx_config.json  web.rs
src/activity/: provider.rs  requestor.rs
src/activity/requestor/: control.rs  state.rs
src/cli/: provider.rs  requestor.rs
src/market/: provider.rs  requestor.rs
src/payment/: api.rs  provider.rs  requestor.rs
swagger/: swagger-initializer.js
