[package]
name = "ya-client"
version = "0.7.0"
description = "Yagna REST API client async binding"
authors = ["Golem Factory <contact@golem.network>"]
homepage = "https://github.com/golemfactory/ya-client"
repository = "https://github.com/golemfactory/ya-client"
license = "LGPL-3.0"
edition = "2018"

[features]
default = []
cli = ['structopt']
sgx = ['graphene-sgx', 'lazy_static', 'secp256k1', 'openssl', 'secp256k1/serde', 'secp256k1/rand', 'ya-client-model/sgx']

[workspace]
members = [
    "model",
]

[dependencies]
ya-client-model = { version= "^0.5", path = "model" }

awc = "3"
actix-codec = "0.5"
bytes = "1"
chrono = "0.4"
envy = "0.4"
futures = "0.3"
hex = "0.4"
heck = "0.3.1"
log = "0.4"
rand = "0.6"
mime = "0.3"
serde = "1"
serde_json = "1.0"
serde_qs = "0.8"
thiserror = "1"
url = "2"

graphene-sgx = { version = "0.3.3", optional = true }
lazy_static = { version = "1.4", optional = true }
secp256k1 = { version = "0.19", optional = true }
structopt = { version = "0.3", optional = true }
openssl = { version = "0.10", optional = true }

[dev-dependencies]
actix-rt = "2.7.0"
anyhow = "1.0"
env_logger = "0.9"
structopt = "0.3"

[package.metadata.release]
dev-version = false
enable-all-features = true
