[package]
name = "ya-client"
version = "0.9.0"
description = "Yagna REST API client async binding"
authors = ["Golem Factory <contact@golem.network>"]
homepage = "https://github.com/golemfactory/ya-client"
repository = "https://github.com/golemfactory/ya-client"
license = "LGPL-3.0"
edition = "2021"

[features]
default = []
cli = ['structopt']
sgx = [
    'graphene-sgx',
    'lazy_static',
    'secp256k1',
    'openssl',
    'secp256k1/serde',
    'secp256k1/rand',
    'ya-client-model/sgx',
    'rand',
]

[workspace]
members = ["model"]

[workspace.dependencies]
secp256k1 = ">=0.23,<0.28"

[dependencies]
ya-client-model = { version = "0.7", path = "model" }
awc = { version = "3", default-features = false }
actix-codec = "0.5"
bytes = "1"
chrono = { version = "0.4.31", default-features = false }
envy = "0.4"
futures = "0.3"
hex = "0.4"
heck = "0.4.1"
log = "0.4"
mime = "0.3.17"
serde = "1"
serde_json = "1.0"
serde_qs = "0.12"
thiserror = "1.0.40"
url = "2"

graphene-sgx = { version = "0.3.3", optional = true }
lazy_static = { version = "1.4", optional = true }
secp256k1 = { workspace = true, optional = true }
rand = { version = "0.8.5", optional = true }
structopt = { version = "0.3", optional = true }
openssl = { version = "0.10", optional = true }

[dev-dependencies]
actix-rt = "2.7.0"
anyhow = "1.0"
bigdecimal = { version = "0.2" }
env_logger = "0.10"
structopt = "0.3"
clap = "4.5.7"

[package.metadata.release]
enable-all-features = true
