[package]
name = "ya-client"
version = "0.2.0"
authors = ["Golem Factory <contact@golem.network>"]
edition = "2018"

[features]
default = []
cli = ['structopt']


[dependencies]
ya-model = { path = "../model" }

awc = "1.0"
backtrace = "0.3"
bytes = "0.5"
chrono = "0.4"
failure = "0.1.6"
futures = "0.3"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"
url = "2.1"
structopt = { version = "0.3.12", optional = true }

[dev-dependencies]
actix-rt = "1.0"
env_logger = "0.7"
structopt = "0.3"
